instruments/AIOUSB/DLL/AIOUSB.dpr


  , ADC_GetCalRefV                                  , ADC_GetCalRefV                         name '_ADC_GetCalRefV'                           , VBADC_GetCalRefV

  , AIOUSB_CloseDevice                              , AIOUSB_CloseDevice                     name '_AIOUSB_CloseDevice'                       , VBAIOUSB_CloseDevice

  , GetDeviceBySerialNumber                         , GetDeviceBySerialNumber                name '_GetDeviceBySerialNumber'                  , VBGetDeviceBySerialNumber

  , AIOUSB_FlashEraseSector                         , AIOUSB_FlashEraseSector                name '_AIOUSB_FlashEraseSector'                  , VBAIOUSB_FlashEraseSector
  , AIOUSB_FlashWrite                               , AIOUSB_FlashWrite                      name '_AIOUSB_FlashWrite'                        , VBAIOUSB_FlashWrite
  , AIOUSB_FlashRead                                , AIOUSB_FlashRead                       name '_AIOUSB_FlashRead'                         , VBAIOUSB_FlashRead
  , DACSetChannelCal                                , DACSetChannelCal                       name '_DACSetChannelCal'                         , VBDACSetChannelCal
  , DACSetBoardRange                                , DACSetBoardRange                       name '_DACSetBoardRange'                         , VBDACSetBoardRange

  , DACOutputProcess                                , DACOutputProcess                       name '_DACOutputProcess'                         , VBDACOutputProcess
  , DACOutputOpen name 'DACOutputOpenNoClear'       , DACOutputOpen                          name '_DACOutputOpenNoClear'                     , VBDACOutputOpen name 'VBDACOutputOpenNoClear'

  , ResolveDeviceIndex                              , ResolveDeviceIndex                     name '_ResolveDeviceIndex'                       , VBResolveDeviceIndex
  , DIO_Read1                                       , DIO_Read1                              name '_DIO_Read1'                                , VBDIO_Read1

  , SelectDeviceViaUI                               , SelectDeviceViaUI                      name '_SelectDeviceViaUI'                        , VBSelectDeviceViaUI

  , AIOUSB_GetStreamStatus                          , AIOUSB_GetStreamStatus                 name '_AIOUSB_GetStreamStatus'                   , VBAIOUSB_GetStreamStatus

  , ADC_GetChannelV                                 , ADC_GetChannelV                        name '_ADC_GetChannelV'                          , VBADC_GetChannelV

  , DACOutputSetInterlock                           , DACOutputSetInterlock                  name '_DACOutputSetInterlock'                    , VBDACOutputSetInterlock
  , DACOutputStart                                  , DACOutputStart                         name '_DACOutputStart'                           , VBDACOutputStart
  , DACOutputCloseNoEnd                             , DACOutputCloseNoEnd                    name '_DACOutputCloseNoEnd'                      , VBDACOutputCloseNoEnd
  , DACOutputFrameRaw                               , DACOutputFrameRaw                      name '_DACOutputFrameRaw'                        , VBDACOutputFrameRaw

  , ADC_SetScanLimits                               , ADC_SetScanLimits                      name '_ADC_SetScanLimits'                        , VBADC_SetScanLimits
  , ADC_SetOversample                               , ADC_SetOversample                      name '_ADC_SetOversample'                        , VBADC_SetOversample
  , ADC_GetScan                                     , ADC_GetScan                            name '_ADC_GetScan'                              , VBADC_GetScan
  , ADC_GetScanV                                    , ADC_GetScanV                           name '_ADC_GetScanV'                             , VBADC_GetScanV

  , AIOUSB_SetStreamingBlockSize                    , AIOUSB_SetStreamingBlockSize           name '_AIOUSB_SetStreamingBlockSize'             , VBAIOUSB_SetStreamingBlockSize

  , GetDeviceSerialNumber                           , GetDeviceSerialNumber                  name '_GetDeviceSerialNumber'                    , VBGetDeviceSerialNumber
  , GetDeviceUniqueStr                              , GetDeviceUniqueStr                     name '_GetDeviceUniqueStr'                       , VBGetDeviceUniqueStr

  , CTR_StartMeasuringPulseWidth                    , CTR_StartMeasuringPulseWidth           name '_CTR_StartMeasuringPulseWidth'             , VBCTR_StartMeasuringPulseWidth
  , CTR_StopMeasuringPulseWidth                     , CTR_StopMeasuringPulseWidth            name '_CTR_StopMeasuringPulseWidth'              , VBCTR_StopMeasuringPulseWidth
  , CTR_GetPulseWidthMeasurement                    , CTR_GetPulseWidthMeasurement           name '_CTR_GetPulseWidthMeasurement'             , VBCTR_GetPulseWidthMeasurement

  , ClearDevices                                    , ClearDevices                           name '_ClearDevices'                             , VBClearDevices

  , CTR_8254Load                                    , CTR_8254Load                           name '_CTR_8254Load'                             , VBCTR_8254Load

  , DIO_ConfigurationQuery                          , DIO_ConfigurationQuery                 name '_DIO_ConfigurationQuery'                   , VBDIO_ConfigurationQuery
  , DIO_ConfigureEx                                 , DIO_ConfigureEx                        name '_DIO_ConfigureEx'                          , VBDIO_ConfigureEx

  , AIOUSB_OfflineWrite1                            , AIOUSB_OfflineWrite1                   name '_AIOUSB_OfflineWrite1'                     , VBAIOUSB_OfflineWrite1
  , AIOUSB_OfflineRead1                             , AIOUSB_OfflineRead1                    name '_AIOUSB_OfflineRead1'                      , VBAIOUSB_OfflineRead1
  , ADC_QueryCal                                    , ADC_QueryCal                           name '_ADC_QueryCal'                             , VBADC_QueryCal

  , AIOUSB_ClearFIFO                                , AIOUSB_ClearFIFO                       name '_AIOUSB_ClearFIFO'                         , VBAIOUSB_ClearFIFO

  , ADC_GetConfig                                   , ADC_GetConfig                          name '_ADC_GetConfig'                            , VBADC_GetConfig
  , ADC_SetConfig                                   , ADC_SetConfig                          name '_ADC_SetConfig'                            , VBADC_SetConfig
  , ADC_RangeAll                                    , ADC_RangeAll                           name '_ADC_RangeAll'                             , VBADC_RangeAll
  , ADC_Range1                                      , ADC_Range1                             name '_ADC_Range1'                               , VBADC_Range1
  , ADC_ADMode                                      , ADC_ADMode                             name '_ADC_ADMode'                               , VBADC_ADMode
  , ADC_SetCal                                      , ADC_SetCal                             name '_ADC_SetCal'                               , VBADC_SetCal
  , ADC_Initialize                                  , ADC_Initialize                         name '_ADC_Initialize'                           , VBADC_Initialize
  , ADC_Start                                       , ADC_Start                              name '_ADC_Start'                                , VBADC_Start
  , ADC_Stop                                        , ADC_Stop                               name '_ADC_Stop'                                 , VBADC_Stop
  , ADC_BulkAcquire                                 , ADC_BulkAcquire                        name '_ADC_BulkAcquire'                          , VBADC_BulkAcquire
  , ADC_BulkPoll                                    , ADC_BulkPoll                           name '_ADC_BulkPoll'                             , VBADC_BulkPoll
  , ADC_GetImmediate                                , ADC_GetImmediate                       name '_ADC_GetImmediate'                         , VBADC_GetImmediate

  , DIO_SPI_Read                                    , DIO_SPI_Read                           name '_DIO_SPI_Read'                             , VBDIO_SPI_Read
  , DIO_SPI_Write                                   , DIO_SPI_Write                          name '_DIO_SPI_Write'                            , VBDIO_SPI_Write

  , CTR_8254ReadStatus                              , CTR_8254ReadStatus                     name '_CTR_8254ReadStatus'                       , VBCTR_8254ReadStatus

  , GenericVendorRead                               , GenericVendorRead                      name '_GenericVendorRead'                        , VBGenericVendorRead
  , GenericVendorWrite                              , GenericVendorWrite                     name '_GenericVendorWrite'                       , VBGenericVendorWrite

  , DIO_StreamOpen                                  , DIO_StreamOpen                         name '_DIO_StreamOpen'                           , VBDIO_StreamOpen
  , DIO_StreamClose                                 , DIO_StreamClose                        name '_DIO_StreamClose'                          , VBDIO_StreamClose
  , DIO_StreamFrame                                 , DIO_StreamFrame                        name '_DIO_StreamFrame'                          , VBDIO_StreamFrame
  , DIO_StreamSetClocks                             , DIO_StreamSetClocks                    name '_DIO_StreamSetClocks'                      , VBDIO_StreamSetClocks

  , CTR_SetWaitGates                                , CTR_SetWaitGates                       name '_CTR_SetWaitGates'                         , VBCTR_SetWaitGates
  , CTR_EndWaitGates                                , CTR_EndWaitGates                       name '_CTR_EndWaitGates'                         , VBCTR_EndWaitGates
  , CTR_WaitForGate                                 , CTR_WaitForGate                        name '_CTR_WaitForGate'                          , VBCTR_WaitForGate
  , CTR_8254ReadAll                                 , CTR_8254ReadAll                        name '_CTR_8254ReadAll'                          , VBCTR_8254ReadAll
  , CTR_8254ReadLatched                             , CTR_8254ReadLatched                    name '_CTR_8254ReadLatched'                      , VBCTR_8254ReadLatched
  , CTR_8254SelectGate                              , CTR_8254SelectGate                     name '_CTR_8254SelectGate'                       , VBCTR_8254SelectGate

  , DACMultiDirect                                  , DACMultiDirect                         name '_DACMultiDirect'                           , VBDACMultiDirect

  , DACDirect                                       , DACDirect                              name '_DACDirect'                                , VBDACDirect

  , CustomEEPROMRead                                , CustomEEPROMRead                       name '_CustomEEPROMRead'                         , VBCustomEEPROMRead
  , CustomEEPROMWrite                               , CustomEEPROMWrite                      name '_CustomEEPROMWrite'                        , VBCustomEEPROMWrite

  , AIOUSB_UploadFirmware                           , AIOUSB_UploadFirmware                  name '_AIOUSB_UploadFirmware'
